--- a/pom.xml
+++ b/pom.xml
@@ -12,20 +12,20 @@
     <dependency>
     <groupId>io.undertow</groupId>
     <artifactId>undertow-core</artifactId>
-    <version>2.0.1.Final</version>
+    <version>2.0.7.Final</version>
 </dependency>
 
 <dependency>
     <groupId>io.undertow</groupId>
     <artifactId>undertow-servlet</artifactId>
-    <version>2.0.1.Final</version>
+    <version>2.0.7.Final</version>
 </dependency>
 
-<dependency>
+<!--  dependency>
     <groupId>io.undertow</groupId>
     <artifactId>undertow-websockets-jsr</artifactId>
-    <version>2.0.1.Final</version>
-    </dependency>
+    <version>2.0.7.Final</version>
+    </dependency-->
    
     </dependencies>
     <build>
