--- a/pom.xml
+++ b/pom.xml
@@ -1,59 +1,74 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
+     <parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>2.0.2.RELEASE</version>
+  </parent>
+    
     <groupId>fi.csc.fairdata</groupId>
     <artifactId>od</artifactId>
     <version>0.0.1</version>
-    <!-- packaging>jar</packaging -->
-    <name>Simple underdow webapp service </name>
-    <description>Simple undertow webapp service </description>
-   
-    <dependencies>
-    <dependency>
-    <groupId>io.undertow</groupId>
-    <artifactId>undertow-core</artifactId>
-    <version>2.0.7.Final</version>
+    <!-- packaging>jar</packaging -->     
+  <packaging>war</packaging>
+  <name>download</name>
+  <description>download.fairdata.fi</description>
+  
+   <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<scope>provided</scope>
+		</dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+    <groupId>com.google.code.gson</groupId>
+    <artifactId>gson</artifactId>
+    <version>2.8.5</version>
 </dependency>
-
-<dependency>
-    <groupId>io.undertow</groupId>
-    <artifactId>undertow-servlet</artifactId>
-    <version>2.0.7.Final</version>
-</dependency>
-
-<!--  dependency>
-    <groupId>io.undertow</groupId>
-    <artifactId>undertow-websockets-jsr</artifactId>
-    <version>2.0.7.Final</version>
-    </dependency-->
-   
+        
     </dependencies>
+
+    <properties>
+        <java.version>1.9</java.version>
+    </properties>
+
+
     <build>
-        <pluginManagement>
-            <plugins>                
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <configuration>
-                        <source>1.8</source>
-                        <target>1.8</target>
-                    </configuration>
-                </plugin>
-      <plugin>
-      <artifactId>maven-assembly-plugin</artifactId>
-      <!-- usage mvn clean compile assembly:single -->
-      <configuration>
-        <archive>
-          <manifest>
-            <mainClass>fi.csc.fairdata.od.MainServer</mainClass>
-          </manifest>
-        </archive>
-        <descriptorRefs>
-          <descriptorRef>jar-with-dependencies</descriptorRef>
-        </descriptorRefs>
-      </configuration>
-    </plugin>
-            </plugins>
-        </pluginManagement>        
+    <finalName>${artifactId}</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
     </build>
-</project>
+  
+  <repositories>
+        <repository>
+            <id>spring-releases</id>
+            <url>https://repo.spring.io/libs-release</url>
+        </repository>
+    </repositories>
+    <pluginRepositories>
+        <pluginRepository>
+            <id>spring-releases</id>
+            <url>https://repo.spring.io/libs-release</url>
+        </pluginRepository>
+    </pluginRepositories>
+   
+ </project>
