--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
     <groupId>fi.csc.fairdata</groupId>
     <artifactId>od</artifactId>
     <version>0.0.1</version>
-    <!-- packaging>jar</packaging -->     
-  <packaging>war</packaging>
+    <packaging>jar</packaging>     
+  <!--  packaging>war</packaging-->
   <name>download</name>
   <description>download.fairdata.fi</description>
   
@@ -23,7 +23,7 @@
         <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
-			<scope>provided</scope>
+			<!--  scope>provided</scope-->
 		</dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -49,7 +49,7 @@
 
 
     <build>
-    <finalName>${artifactId}</finalName>
+    <!--  finalName></finalName-->
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
